fix: option editTimeManually was not documented, fixed layout bugs (#278)
Added demo for editTimeManually for time and datetime picker.
Removed option `position` which was mentioned in the docs but
is not available anymore.

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -71,6 +71,7 @@ $calendar-date-padding: .1rem 0 !default
                 margin-right: .5rem
                 color: $primary
                 font-weight: 100
+                white-space: nowrap
 
             .datetimepicker-selection-date
                 font-size: .85rem
